# evm-workshop

./: README.md
bench/: .gitignore  Cargo.toml  build.rs
bench/benches/: common.rs  rust_evm.rs
bench/contracts/: Add.sol
bench/src/: lib.rs  main.rs  revmc_runner.rs  rust_evm_runner.rs
docs/: foundry-podcast.md  role-of-reth-podcast.md
optimism/: local.json
revm/: Cargo.toml
revm/evm-simulator/: Cargo.toml
revm/evm-simulator/src/: main.rs
revm/fork-db/: Cargo.toml
revm/fork-db/src/: fork_db.rs  lib.rs
trace/ethers-trace/: Cargo.toml
trace/ethers-trace/src/: trace_call.rs  trace_transaction.rs
trace/evm-trace/: README.md  pyproject.toml
trace/evm-trace/src/evm_trace/: main.py
